--- a/home.html
+++ b/home.html
@@ -120,6 +120,7 @@
     <script src="./js/globalFunction.js"></script>
     <script type="text/javascript" src="js/plugins/bootstrap-notify.min.js"></script>
     <script type="text/javascript">
+        authenticate()
         let cookieData = getCookie("jwt");
         let username = document.getElementById('side_bar_username_id')
         let usernumber = document.getElementById('side_bar_usernumber_id')
