--- a/profile.html
+++ b/profile.html
@@ -190,6 +190,7 @@
     <script src="./js/globalFunction.js"></script>
     <script type="text/javascript" src="js/plugins/bootstrap-notify.min.js"></script>
     <script type="text/javascript">
+        authenticate()
         window.onload = function () {
             startLoader()
             let cookieData = getCookie("jwt");
