--- a/win-history.html
+++ b/win-history.html
@@ -207,6 +207,7 @@
     <script src="js/main.js"></script>
     <script src="./js/globalFunction.js"></script>
     <script type="text/javascript">
+        authenticate()
         let cookieData = getCookie("jwt");
         let username = document.getElementById('side_bar_username_id')
         let usernumber = document.getElementById('side_bar_usernumber_id')
