--- a/passbook.html
+++ b/passbook.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Arena</title>
+    <title>Passbook - Arena</title>
     <!-- Main CSS-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -52,7 +52,7 @@
             <a href="profile.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Profile</a>
         </div>
         <ul class="app-menu">
-            <li><a class="app-menu__item active" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
+            <li><a class="app-menu__item" href="home.html"><i class="app-menu__icon fa fa-home"></i><span
                         class="app-menu__label">Home</span></a>
             </li>
             <li><a class="app-menu__item" href="game-rate.html"><i class="app-menu__icon fa  fa-inr"></i><span
@@ -101,76 +101,35 @@
         </ul>
     </aside>
     <main class="app-content">
-        <div class="d-flex justify-content-around ">
-            <div class="d-flex justify-content-end flex-column ">
-                <h6 id="ongoing_tab" class="active_tab_dashboard" onclick="updateTab('ongoing');">ONGOING</h6>
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <img src="assets/images/dashboard_coin.webp" style="height: 80px;width: 100px;" alt="">
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <h6 id="upcoming_tab" onclick="updateTab('upcoming');">UPCOMING</h6>
+        <div style="background:none;"
+            class="transaction_list_top_section d-flex justify-content-around align-items-center ">
+            <img src="./assets/images/passbook.png" alt="">
+            <div style="border-color: white;">
+                <p>Total Balance</p>
+                <p class="money">₹100</p>
             </div>
         </div>
-        <div class="home_page_main_container">
-            <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')"
-                        class="game_card_play_btn" alt="Game play">
-                    <h4>Game Name</h4>
-                    <small><b>XXX - XX - XXX</b></small>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small class="text-danger">5 hrs 40 min left</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
+        <div class="row d-flex justify-content-around">
+            <div class="col-5 d-flex align-items-center p-0"
+                style="border-radius: 6px; height: 50px;color:black;background:white">
+                <div class="d-flex justify-content-center align-items-center "
+                    style="background:#1AC16A;height: 100%;width: 42px;border-radius: 6px 0px 0px 6px;">
+                    <img src="./assets/images/passbook-add.png" alt="">
                 </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')"
-                        class="game_card_play_btn" alt="Game play">
-                    <h4>Game Name</h4>
-                    <small><b>XXX - XX - XXX</b></small>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small class="text-danger">5 hrs 40 min left</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
+                <div class="d-flex justify-content-center align-items-center pt-2"
+                    style="height:100%;width: calc(100% - 42px);">
+                    <h5>Add</h5>
                 </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn"
-                        alt="Game play">
-                    <h4>Game Name</h4>
-                    <small><b>123 - 45 - 123</b></small>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
-                </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn"
-                        alt="Game play">
-                    <h4>Game Name</h4>
-                    <small><b>123 - 45 - 123</b></small>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
-                </div>
-
             </div>
-            <div id="upcoming_tab_content" class="d-none">
-                <div class="ongoing_card upcoming_card">
-                    <img src="./assets/shapes/upcomingRectangle.svg" class="game_card_label" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <p><img src="./assets/shapes/setReminder.svg" />Set Reminder</p>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
+            <div class="col-5 d-flex align-items-center p-0"
+                style="border-radius: 6px;height: 50px;color:black;background:white">
+                <div class="d-flex justify-content-center align-items-center"
+                    style="background:#FFCA28;height: 100%;width: 42px;border-radius: 6px 0px 0px 6px;">
+                    <img src="./assets/images/passbook-withdrawal.png" alt="">
+                </div>
+                <div class="d-flex justify-content-center align-items-center  text-center pt-2"
+                    style="height:100%;width: calc(100% - 42px) ;">
+                    <h5>Withdrawal</h5>
                 </div>
             </div>
         </div>
