--- a/withdrawal.html
+++ b/withdrawal.html
@@ -181,7 +181,7 @@
                 </div>
                 <div class="transaction_card">
                     <div class="transaction_avatar_div withdrawal_avatar">
-                        <i class="fa fa-plus" aria-hidden="true"></i>
+                        <i class="fa fa-minus" aria-hidden="true"></i>
                     </div>
                     <div
                         style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
