--- a/home.html
+++ b/home.html
@@ -69,26 +69,21 @@
                     <li><a class="treeview-item" href="deposite-history.html"><i class="icon fa fa-circle-o"></i>Deposit
                             History</a>
                     </li>
-                    <li><a class="treeview-item" href="withdrawal-history.html"><i
-                                class="icon fa fa-circle-o"></i>Withdrawal
+                    <li><a class="treeview-item" href="withdrawal.html"><i class="icon fa fa-circle-o"></i>Withdrawal
                             History</a>
                     </li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
-                        class="app-menu__label">Withdrawal</span></a></li>
+
             <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-handshake-o"></i><span class="app-menu__label">Help</span><i
                         class="treeview-indicator fa fa-angle-right"></i></a>
                 <ul class="treeview-menu">
-                    <li><a class="treeview-item" href="form-components.html"><i class="icon fa fa-circle-o"></i> Form
-                            How to Play</a></li>
-                    <li><a class="treeview-item" href="form-custom.html"><i class="icon fa fa-circle-o"></i> Custom
-                            Game Rate Card</a></li>
-                    <li><a class="treeview-item" href="form-samples.html"><i class="icon fa fa-circle-o"></i> Form
-                            Notice </a></li>
-                    <li><a class="treeview-item" href="form-notifications.html"><i class="icon fa fa-circle-o"></i> Form
-                            Rules Board</a></li>
+                    <li><a class="treeview-item" href="how-to-play.html"><i class="icon fa fa-circle-o"></i>How to
+                            Play</a></li>
+
+                    <li><a class="treeview-item" href="rules.html"><i class="icon fa fa-circle-o"></i>Notice board /
+                            Rules</a></li>
                 </ul>
             </li>
             <li><a class="app-menu__item" href="contact-us.html"><i class="app-menu__icon fa fa-headphones"></i><span
@@ -111,8 +106,10 @@
                  -->
             </div>
         </div>
-        <div class="home_page_whatsApp" id="home_page_whatsApp_id"><img src="./assets/shapes/whatasapp_icon.png"
-                alt=""><span><i onclick="document.getElementById('home_page_whatsApp_id').innerHTML=''"
+        <div class="home_page_whatsApp" id="home_page_whatsApp_id"><a
+                href="https://api.whatsapp.com/send?phone=+919834848219&text=Hii"><img style="height: 35px;margin: 7px;"
+                    src="./assets/shapes/whatsapp.png" alt=""></a><span><i
+                    onclick="document.getElementById('home_page_whatsApp_id').innerHTML=''"
                     class="fa fa-times"></i></span></div>
     </main>
     <!-- Essential javascripts for application to work-->
