Slider UI completed

--- a/home.html
+++ b/home.html
@@ -96,8 +96,40 @@
     </aside>
     <main class="app-content">
         <div style="background-color: white;height: 125px;  margin-left: -13px;
-        margin-right: -13px;" class="d-flex justify-content-center align-items-center">
-            <img src="./assets/images/google-ads.png" alt="">
+        margin-right: -13px;margin-bottom: 10px;" class=" slideshow-container">
+            <!-- <img src="./assets/images/google-ads.png" alt=""> -->
+            <div class="mySlides fade">
+                <img src="./assets/images/slider1.png">
+                <div class="text">
+                    <div style="text-align:center">
+                        <span class="dot bg-danger "></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="./assets/images/slider3.jpg">
+                <div class="text">
+                    <div style="text-align:center">
+                        <span class="dot"></span>
+                        <span class="dot bg-danger"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="./assets/images/slider2.jpg">
+                <div class="text">
+                    <div style="text-align:center">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot bg-danger"></span>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="home_page_main_container">
             <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
@@ -199,6 +231,27 @@
                     type: "danger"
                 });
             })
+        }
+    </script>
+    <script>
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) { slideIndex = 1 }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+            setTimeout(showSlides, 2000); // Change image every 2 seconds
         }
     </script>
 </body>
