--- a/game.html
+++ b/game.html
@@ -36,7 +36,8 @@
             <!-- User Menu-->
             <li><a class="app-nav__item" style="font-size: 15px;text-decoration: none;" href="passbook.html"><span
                         style="border: 1px solid white;padding: 3px;border-radius: 5px;"><img height="17px"
-                            style="margin-top:-3px;" src="./assets/shapes/et_wallet.svg" alt="">&nbsp;50</span></a>
+                            style="margin-top:-3px;" src="./assets/shapes/et_wallet.svg" alt="">&nbsp;<span
+                            id="wallet_amount">0</span></span></a>
             </li>
         </ul>
     </header>
@@ -164,6 +165,7 @@
             username.innerText = cookieData?.name
             usernumber.innerText = cookieData?.user_phonenumber
         }
+        updateWallet()
     </script>
     <!-- control tab click -->
     <script>
