--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,8 @@
             <!-- User Menu-->
             <li><a class="app-nav__item" style="font-size: 15px;text-decoration: none;" href="passbook.html"><span
                         style="border: 1px solid white;padding: 3px;border-radius: 5px;"><img height="17px"
-                            style="margin-top:-3px;" src="./assets/shapes/et_wallet.svg" alt="">&nbsp;50</span></a>
+                            style="margin-top:-3px;" src="./assets/shapes/et_wallet.svg" alt="">&nbsp;<span
+                            id="wallet_amount">0</span></span></a>
             </li>
         </ul>
     </header>
@@ -106,6 +107,7 @@
                 <input type="text" name="name" id="name_id" placeholder="Name">
                 <input type="number" name="phone_number" id="phone_number_id" placeholder="Phone Number">
                 <input type="email" name="email" id="email_id" placeholder="Email">
+                <input type="text" name="upi" id="upi_id" placeholder="UPI Id">
                 <div class="btnWrapper">
                     <button type="button" onclick="saveProfile()">Save</button>
                 </div>
@@ -196,9 +198,8 @@
                 usernumber.innerText = cookieData?.user_phonenumber
             }
             if (cookieData) {
-                axiosInstance.post('profile_fetch', {
-                    "phone_number": cookieData?.user_phonenumber
-                }).then((response) => {
+                updateWallet()
+                axiosInstance.get('profile_fetch').then((response) => {
                     endLoader()
                     if (response.status === 200) {
                         let dataSet = response?.data?.user
