--- a/signup.html
+++ b/signup.html
@@ -37,24 +37,24 @@
             <form class="login-form" style="padding-top: 20px;">
                 <div class="form-group">
                     <label class="control-label">Name</label>
-                    <input class="form-control" id="signup_name" type="text" placeholder="Name" autofocus>
+                    <input class="form-control login_form" id="signup_name" type="text" placeholder="Name" autofocus>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Phone</label>
-                    <input class="form-control" maxlength="10" id="signup_phone" type="text" placeholder="Phone"
+                    <input class="form-control login_form" maxlength="10" id="signup_phone" type="text" placeholder="Phone"
                         autofocus oninput="this.value=this.value.replace(/[^0-9]/g,'');">
                 </div>
                 <div class="form-group">
                     <label class="control-label">Email</label>
-                    <input class="form-control" id="signup_email" type="email" placeholder="Email">
+                    <input class="form-control login_form" id="signup_email" type="email" placeholder="Email">
                 </div>
                 <div class="form-group">
                     <label class="control-label">Password</label>
-                    <input class="form-control" id="signup_password" type="password" placeholder="Password">
+                    <input class="form-control login_form" id="signup_password" type="password" placeholder="Password">
                 </div>
                 <div class="form-group">
                     <label class="control-label">Confirm Password</label>
-                    <input class="form-control" id="signup_c_password" type="password" placeholder="Confirm Password">
+                    <input class="form-control login_form" id="signup_c_password" type="password" placeholder="Confirm Password">
                 </div>
                 <div class="form-group btn-container">
                     <button type="button" onclick="handleUserLogin()" class="btn btn-primary btn-block"><i
