--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <form class="login-form">
                 <div class="form-group">
                     <label class="control-label">PHONE</label>
-                    <input class="form-control" maxlength="10" id="login_username" type="text" placeholder="Phone"
+                    <input class="form-control login_form" maxlength="10" id="login_username" type="text" placeholder="Phone"
                         autofocus oninput="this.value=this.value.replace(/[^0-9]/g,'');">
                 </div>
                 <div class="form-group">
                     <label class="control-label">PASSWORD</label>
-                    <input class="form-control" id="login_password" type="password" placeholder="Password">
+                    <input class="form-control login_form" id="login_password" type="password" placeholder="Password">
                 </div>
                 <div class="form-group mt-4">
                     <div class="utility">
@@ -65,7 +65,7 @@
                 <h3 class="login-head"><i class="fa fa-lg fa-fw fa-lock"></i>Forgot Password ?</h3>
                 <div class="form-group">
                     <label class="control-label">EMAIL</label>
-                    <input class="form-control" type="text" placeholder="Email">
+                    <input class="form-control login_form" type="text" placeholder="Email">
                 </div>
                 <div class="form-group btn-container">
                     <button class="btn btn-primary btn-block"><i class="fa fa-unlock fa-lg fa-fw"></i>RESET</button>
