Change jwt token key

--- a/bid-history.html
+++ b/bid-history.html
@@ -121,7 +121,7 @@
     <script type="text/javascript" src="js/plugins/bootstrap-notify.min.js"></script>
     <script type="text/javascript">
         authenticate()
-        let cookieData = getCookie("jwt");
+        let cookieData =  getCookie("user_jwt");
         let username = document.getElementById('side_bar_username_id')
         let usernumber = document.getElementById('side_bar_usernumber_id')
         if (cookieData) {
