--- a/contact-us.html
+++ b/contact-us.html
@@ -152,7 +152,7 @@
     <script src="./js/globalFunction.js"></script>
     <script type="text/javascript">
         authenticate()
-        let cookieData = getCookie("jwt");
+        let cookieData = getCookie("user_jwt");
         let username = document.getElementById('side_bar_username_id')
         let usernumber = document.getElementById('side_bar_usernumber_id')
         if (cookieData) {
