--- a/passbook.html
+++ b/passbook.html
@@ -113,7 +113,8 @@
         </div>
         <div class="row d-flex justify-content-around">
             <div class="col-5 d-flex align-items-center p-0"
-                style="border-radius: 6px; height: 50px;color:black;background:white" data-toggle="modal" data-target="#add_money_modal">
+                style="border-radius: 6px; height: 50px;color:black;background:white" data-toggle="modal"
+                data-target="#add_money_modal">
                 <div class="d-flex justify-content-center align-items-center "
                     style="background:#1AC16A;height: 100%;width: 42px;border-radius: 6px 0px 0px 6px;">
                     <img src="./assets/images/passbook-add.png" alt="">
@@ -158,7 +159,8 @@
                             <div class="form-group row">
                                 <label class="control-label col-md-3">Amount</label>
                                 <div class="col-md-8">
-                                    <input class="form-control" type="text" placeholder="-" id="add_game_name" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                                    <input class="form-control" type="text" placeholder="-" id="add_game_name"
+                                        oninput="this.value=this.value.replace(/[^0-9]/g,'');">
                                 </div>
                             </div>
                             <div class="modal-footer " style="justify-content: center;margin-top:20px;">
@@ -179,7 +181,7 @@
     <script src="./js/globalFunction.js"></script>
     <script type="text/javascript">
         authenticate()
-        let cookieData = getCookie("jwt");
+        let cookieData = getCookie("user_jwt");
         let username = document.getElementById('side_bar_username_id')
         let usernumber = document.getElementById('side_bar_usernumber_id')
         if (cookieData) {
